--- a/src/views/schedules/_religion-b.jade
+++ b/src/views/schedules/_religion-b.jade
@@ -10,16 +10,16 @@
   .row.schedule--row(data-time="11:45")
   .row.schedule--row(data-time="12:00")
   .row.schedule--row(data-time="12:15")
-  .row.schedule--row(data-time="12:30")
+  .row.schedule--row.ticket-2(data-time="12:30")
     .event.event__row-1.event__type-prepare
-  .row.schedule--row(data-time="12:45")
+  .row.schedule--row.ticket-2(data-time="12:45")
     .event.event__row-4
       .time
         .start 12:45
         .end 13:45
-  .row.schedule--row(data-time="13:00")
-  .row.schedule--row(data-time="13:15")
-  .row.schedule--row(data-time="13:30")
+  .row.schedule--row.ticket-2(data-time="13:00")
+  .row.schedule--row.ticket-2(data-time="13:15")
+  .row.schedule--row.ticket-2(data-time="13:30")
   .row.schedule--row(data-time="13:45")
   .row.schedule--row(data-time="14:00")
   .row.schedule--row(data-time="14:15")
@@ -47,16 +47,16 @@
   .row.schedule--row(data-time="17:15")
   .row.schedule--row(data-time="17:30")
   .row.schedule--row(data-time="17:45")
-  .row.schedule--row(data-time="18:00")
+  .row.schedule--row.ticket-1(data-time="18:00")
     .event.event__row-1.event__type-prepare
-  .row.schedule--row(data-time="18:15")
+  .row.schedule--row.ticket-1(data-time="18:15")
     .event.event__row-4
       .time
         .start 18:15
         .end 19:15
-  .row.schedule--row(data-time="18:30")
-  .row.schedule--row(data-time="18:45")
-  .row.schedule--row(data-time="19:00")
+  .row.schedule--row.ticket-1(data-time="18:30")
+  .row.schedule--row.ticket-1(data-time="18:45")
+  .row.schedule--row.ticket-1(data-time="19:00")
   .row.schedule--row(data-time="19:15")
   .row.schedule--row(data-time="19:30")
     .event.event__row-1.event__type-prepare
