--- a/src/views/schedules/_religion.jade
+++ b/src/views/schedules/_religion.jade
@@ -1,14 +1,14 @@
 .col-md-1.schedule.schedule__color-blue
-  .row.schedule--row(data-time="11:00")
+  .row.schedule--row.ticket-2(data-time="11:00")
     .event.event__row-1.event__type-prepare
-  .row.schedule--row(data-time="11:15")
+  .row.schedule--row.ticket-2(data-time="11:15")
     .event.event__row-4
       .time
         .start 11:15
         .end 12:15
-  .row.schedule--row(data-time="11:30")
-  .row.schedule--row(data-time="11:45")
-  .row.schedule--row(data-time="12:00")
+  .row.schedule--row.ticket-2(data-time="11:30")
+  .row.schedule--row.ticket-2(data-time="11:45")
+  .row.schedule--row.ticket-2(data-time="12:00")
   .row.schedule--row(data-time="12:15")
   .row.schedule--row(data-time="12:30")
     .event.event__row-1.event__type-prepare
@@ -35,16 +35,16 @@
   .row.schedule--row(data-time="15:30")
   .row.schedule--row(data-time="15:45")
   .row.schedule--row(data-time="16:00")
-  .row.schedule--row(data-time="16:15")
+  .row.schedule--row.ticket-1(data-time="16:15")
     .event.event__row-1.event__type-prepare
-  .row.schedule--row(data-time="16:30")
+  .row.schedule--row.ticket-1(data-time="16:30")
     .event.event__row-4
       .time
         .start 16:30
         .end 17:30
-  .row.schedule--row(data-time="16:45")
-  .row.schedule--row(data-time="17:00")
-  .row.schedule--row(data-time="17:15")
+  .row.schedule--row.ticket-1(data-time="16:45")
+  .row.schedule--row.ticket-1(data-time="17:00")
+  .row.schedule--row.ticket-1(data-time="17:15")
   .row.schedule--row(data-time="17:30")
   .row.schedule--row(data-time="17:45")
   .row.schedule--row(data-time="18:00")
