--- a/src/views/schedules/_wedding.jade
+++ b/src/views/schedules/_wedding.jade
@@ -1,16 +1,16 @@
 .col-md-1.schedule.schedule__color-orange
-  .row.schedule--row(data-time="11:00")
+  .row.schedule--row.ticket-1(data-time="11:00")
     .event.event__row-2.event__type-prepare
-  .row.schedule--row(data-time="11:15")
-  .row.schedule--row(data-time="11:30")
+  .row.schedule--row.ticket-1(data-time="11:15")
+  .row.schedule--row.ticket-1(data-time="11:30")
     .event.event__row-4
       .time
         .start 11:30
         .end 12:45
-  .row.schedule--row(data-time="11:45")
-  .row.schedule--row(data-time="12:00")
-  .row.schedule--row(data-time="12:15")
-  .row.schedule--row(data-time="12:30")
+  .row.schedule--row.ticket-1(data-time="11:45")
+  .row.schedule--row.ticket-1(data-time="12:00")
+  .row.schedule--row.ticket-1(data-time="12:15")
+  .row.schedule--row.ticket-1(data-time="12:30")
   .row.schedule--row(data-time="12:45")
   .row.schedule--row(data-time="13:00")
   .row.schedule--row(data-time="13:15")
