--- a/src/views/schedules/_corpse.jade
+++ b/src/views/schedules/_corpse.jade
@@ -3,7 +3,7 @@
     .event.event__row-2.event__type-prepare
   .row.schedule--row(data-time="11:15")
   .row.schedule--row(data-time="11:30")
-    .event.event__row-6.event__status-off
+    .event.event__row-6
       .time
         .start 11:30
         .end 13:00
@@ -14,19 +14,19 @@
   .row.schedule--row(data-time="12:45")
   .row.schedule--row(data-time="13:00")
   .row.schedule--row(data-time="13:15")
-  .row.schedule--row(data-time="13:30")
+  .row.schedule--row.ticket-1(data-time="13:30")
     .event.event__row-2.event__type-prepare
-  .row.schedule--row(data-time="13:45")
-  .row.schedule--row(data-time="14:00")
+  .row.schedule--row.ticket-1(data-time="13:45")
+  .row.schedule--row.ticket-1(data-time="14:00")
     .event.event__row-6
       .time
         .start 14:00
         .end 15:30
-  .row.schedule--row(data-time="14:15")
-  .row.schedule--row(data-time="14:30")
-  .row.schedule--row(data-time="14:45")
-  .row.schedule--row(data-time="15:00")
-  .row.schedule--row(data-time="15:15")
+  .row.schedule--row.ticket-1(data-time="14:15")
+  .row.schedule--row.ticket-1(data-time="14:30")
+  .row.schedule--row.ticket-1(data-time="14:45")
+  .row.schedule--row.ticket-1(data-time="15:00")
+  .row.schedule--row.ticket-1(data-time="15:15")
   .row.schedule--row(data-time="15:30")
   .row.schedule--row(data-time="15:45")
   .row.schedule--row(data-time="16:00")
